# Zero-Day-Attack

./: .env  .env.example  .gitignore  ADVANCED_ROADMAP.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  DELIVERABLES.md  DEPLOYMENT_FINAL_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PROCESS.md  ENV_SECRETS_GUIDE.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_STATUS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESEARCH_FEDERATED_LEARNING.md  RESEARCH_GNN.md  RESEARCH_HARDWARE_ACCELERATION.md  RESTRUCTURING_SUMMARY.md  TODO.md  VERCEL_DEPLOYMENT.md  XIDS_Presentation.md  docker-compose.yml
vercel-deploy/: README.md  (+7 more)
xids-framework/: .dockerignore  .gitignore  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_PHASE2_COMPLETE.md  Makefile  PROJECT_SUMMARY.md  README.md  RESTRUCTURING_COMPLETE.md  docker-compose.yml  generate_explanations.py  generate_explanations_fast.py  prepare_datasets.py  pyproject.toml  requirements.txt  setup.py
xids-framework/configs/: default.yaml  production.yaml
xids-framework/dashboard/: backend.py
xids-framework/deployment/: kubernetes-deployment.yaml
xids-framework/docs/: ARCHITECTURE.md  PROPOSAL.md
xids-framework/docs/architecture/: STRUCTURE.md
xids-framework/frontend/: advanced_dashboard.html  dashboard.html  nohup.out  server.py
xids-framework/inference/: api_server.py  ensemble_api.py  ensemble_handler.py  security.py  tls.py
xids-framework/scripts/: evaluate.py  train.py
xids-framework/siem/: config.yml  elasticsearch_connector.py  siem_handler.py  siem_server.py  splunk_connector.py
xids-framework/src/xids/api/: app.py
xids-framework/src/xids/api/middleware/: security.py
xids-framework/src/xids/api/routes/: health.py  predictions.py
xids-framework/streaming/: kafka_producer.py  metrics_dashboard.py  metrics_server.py  streaming_server.py
xids-framework/tests/: conftest.py  load_test_k6.js  test_dashboard.py  test_e2e.py  test_framework.py  test_kafka_advanced.py  test_siem.py
xids-framework/tests/integration/: test_kafka.py
xids-framework/tests/performance/: benchmark.py  locustfile.py
xids-framework/training/: config.yaml
xids-framework/xids/: __init__.py
xids-framework/xids/evaluation/: __init__.py
xids-framework/xids/explainability/: __init__.py  lime_explainer.py
xids-framework/xids/models/: __init__.py
xids-framework/xids/pipeline/: __init__.py  imbalance_handling.py  synthetic_data_generator.py
xids-framework/xids/training/: __init__.py
(+24 files in other folders)
